systemd-mail-unit added

--- a/my-config/DEBIAN/control
+++ b/my-config/DEBIAN/control
@@ -1,11 +1,11 @@
 Package: my-config
-Version: 0.6
+Version: 0.11
 Section: misc
 Priority: extra
 Architecture: all
 Maintainer: Jakobus Schürz <xundeenergie@gmail.com>
 Homepage: http://github.com/xundeenergie/my-config
 Provides: my-config
-Depends: 
+Depends: ipset, youtube-dl, systemd, curl, wget
 Description: My configurations 
  Special configurations for this and that around in linux, for jakob schürz
