--- a/my-config/DEBIAN/control
+++ b/my-config/DEBIAN/control
@@ -1,12 +1,12 @@
 Package: my-config
-Version: 0.11.18
+Version: 0.11.19
 Section: misc
 Priority: extra
 Architecture: all
 Maintainer: Jakobus Schürz <xundeenergie@gmail.com>
 Homepage: http://github.com/xundeenergie/my-config
 Provides: my-config
-Depends:
+Depends: vim, vim-addon-manager, vim-gtk3, task-german, task-german-desktop
 Recommends: my-services
 Description: My configurations 
  Special configurations for this and that around in linux, for jakob schürz
