--- a/my-config/etc/systemd/user/mpDris.service.d/unit.conf
+++ b/my-config/etc/systemd/user/mpDris.service.d/unit.conf
@@ -2,3 +2,6 @@
 ConditionPathExists=/usr/bin/mpd
 ConditionPathExists=/usr/bin/mpDris2
 
+[Service]
+Environment=MPD_HOST=/run/user/%U/mpd.socket
+Environment=MPD_PORT=6%U
