--- a/my-config/etc/systemd/user/mpd.service.d/service.conf
+++ b/my-config/etc/systemd/user/mpd.service.d/service.conf
@@ -1,3 +1,7 @@
 [Unit]
 ConditionPathExists=%h/.config/mpd/mpd.conf
 ConditionPathExists=/usr/bin/mpd
+
+[Service]
+Environment=MPD_HOST=/run/user/%U/mpd.socket
+Environment=MPD_PORT=6%U
