--- a/my-config/etc/systemd/user/mpDris2.service.d/unit.conf
+++ b/my-config/etc/systemd/user/mpDris2.service.d/unit.conf
@@ -1,6 +1,7 @@
 [Unit]
 ConditionPathExists=/usr/bin/mpd
 ConditionPathExists=/usr/bin/mpDris2
+ConditionPathExists=%h/.config/mpd/mpd.conf
 
 [Service]
 Environment=MPD_HOST=/run/user/%U/mpd.socket
