--- a/my-config/etc/systemd/user/mpDris2.service.d/unit.conf
+++ b/my-config/etc/systemd/user/mpDris2.service.d/unit.conf
@@ -3,7 +3,4 @@ ConditionPathExists=/usr/bin/mpd
 ConditionPathExists=/usr/bin/mpDris2
 ConditionPathExists=%h/.config/mpd/mpd.conf
 ConditionPathExists=%t/mpd.socket
-
-[Service]
-Environment=MPD_HOST=/run/user/%U/mpd.socket
-Environment=MPD_PORT=6%U
+After=mpd.service
